--- a/sliderchoropleth.html
+++ b/sliderchoropleth.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <!-- http://bl.ocks.org/darrenjaworski/5397202#index.html -->
+<!-- Testing stuff -->
 <style>
 	.county-border {
 		fill: none;
